--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,32 @@
-<p>projects works!</p>
+<div class="content">
+  <div class="title">
+    <div *ngIf="global.lang === 'en'">Projects</div>
+    <div *ngIf="global.lang === 'pt'">Projetos</div>
+  </div>
+
+  <div class="main">
+    <div class="item" id="project-limoney">
+      <div class="image">
+        <img src="../../../assets/projects/limoney.png" alt="Logo Limoney" />
+      </div>
+    </div>
+
+    <div class="item" id="project-pompeijs">
+      <div class="image">
+        <img src="../../../assets/projects/pompeijs.png" alt="Logo PompeiJS" />
+      </div>
+    </div>
+
+    <div class="item" id="project-tivolijs">
+      <div class="image">
+        <img src="../../../assets/projects/tivolijs.png" alt="Logo TivoliJS" />
+      </div>
+    </div>
+
+    <div class="item" id="project-navonajs">
+      <div class="image">
+        <img src="../../../assets/projects/navonajs.png" alt="Logo NavonaJS" />
+      </div>
+    </div>
+  </div>
+</div>
