Desktop version: add project's sections

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -9,24 +9,119 @@
       <div class="image">
         <img src="../../../assets/projects/limoney.png" alt="Logo Limoney" />
       </div>
+
+      <div class="wrap">
+        <div class="name">Limoney</div>
+
+        <div class="text">
+          <div *ngIf="global.lang === 'en'">
+            Personal financial management assistance app. (Under development)
+          </div>
+
+          <div *ngIf="global.lang === 'pt'">
+            App de auxílio de gestão financeira pessoal. (Em desenvolvimento)
+          </div>
+        </div>
+
+        <div class="link">
+          <a href="https://limoney.app" target="_blank">
+            <div *ngIf="global.lang === 'en'">Visit</div>
+            <div *ngIf="global.lang === 'pt'">Saiba mais</div>
+          </a>
+        </div>
+      </div>
+      <!-- end .wrap -->
     </div>
+    <!-- end #project-limoney -->
 
     <div class="item" id="project-pompeijs">
       <div class="image">
         <img src="../../../assets/projects/pompeijs.png" alt="Logo PompeiJS" />
       </div>
+
+      <div class="wrap">
+        <div class="name">pompei.js</div>
+
+        <div class="text">
+          <div *ngIf="global.lang === 'en'">
+            CSS / JQuery library for creating responsive layouts based on rows
+            and columns.
+          </div>
+
+          <div *ngIf="global.lang === 'pt'">
+            Biblioteca CSS/JQuery para criar layouts responsívos baseados em
+            linhas e colunas.
+          </div>
+        </div>
+
+        <div class="link">
+          <a href="https://philipi.bovo.me/pompeijs/" target="_blank">
+            <div *ngIf="global.lang === 'en'">Visit</div>
+            <div *ngIf="global.lang === 'pt'">Saiba mais</div>
+          </a>
+        </div>
+      </div>
+      <!-- end .wrap -->
     </div>
+    <!-- end #project-pompeijs -->
 
     <div class="item" id="project-tivolijs">
       <div class="image">
         <img src="../../../assets/projects/tivolijs.png" alt="Logo TivoliJS" />
       </div>
+
+      <div class="wrap">
+        <div class="name">tivoli.js</div>
+
+        <div class="text">
+          <div *ngIf="global.lang === 'en'">
+            CSS / JQuery library to facilitate the use of forms on pages HTML.
+          </div>
+
+          <div *ngIf="global.lang === 'pt'">
+            Biblioteca CSS/JQuery para facilitar o uso de formulários em páginas
+            HTML.
+          </div>
+        </div>
+
+        <div class="link">
+          <a href="https://philipi.bovo.me/tivolijs/" target="_blank">
+            <div *ngIf="global.lang === 'en'">Visit</div>
+            <div *ngIf="global.lang === 'pt'">Saiba mais</div>
+          </a>
+        </div>
+      </div>
+      <!-- end .wrap -->
     </div>
+    <!-- end #project-tivolijs -->
 
     <div class="item" id="project-navonajs">
       <div class="image">
         <img src="../../../assets/projects/navonajs.png" alt="Logo NavonaJS" />
       </div>
+
+      <div class="wrap">
+        <div class="name">navona.js</div>
+
+        <div class="text">
+          <div *ngIf="global.lang === 'en'">
+            CSS / JQuery photo gallery elegant and easy to use.
+          </div>
+
+          <div *ngIf="global.lang === 'pt'">
+            Galeria de fotos CSS/JQuery elegante e fácil de usar.
+          </div>
+        </div>
+
+        <div class="link">
+          <a href="https://philipi.bovo.me/navonajs/" target="_blank">
+            <div *ngIf="global.lang === 'en'">Visit</div>
+            <div *ngIf="global.lang === 'pt'">Saiba mais</div>
+          </a>
+        </div>
+      </div>
+      <!-- end .wrap -->
     </div>
+    <!-- end #project-navonajs -->
   </div>
 </div>
