--- a/src/app/styles/desktop.scss
+++ b/src/app/styles/desktop.scss
@@ -789,23 +789,62 @@ section {
       transition: all 500ms;
       // #projects .content > .item
       > .item {
+        position: relative;
+        width: 100%;
         margin: 0 25px;
         width: 25%;
         height: 200px;
         color: #333333;
         background: rgba(247, 247, 247, 0.5);
-        padding: 20px 0;
+        padding: 20px 0 50px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: flex-end;
         transition: all 500ms;
         // #projects .content > .item > .image
         > .image {
+          position: absolute;
+          top: 50%;
+          transform: translate(0, -50%);
+          width: 100%;
+          text-align: center;
+          z-index: 5;
           transition: all 500ms;
           // #projects .content > .item > .image > img
           > img {
             transition: all 500ms;
+          }
+        }
+        // #projects .content > .item > .wrap
+        > .wrap {
+          width: 100%;
+          height: 70%;
+          opacity: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+          transition: all 500ms;
+          // #projects .content > .item > .wrap > .name
+          > .name {
+            font-weight: 100;
+            font-size: 2rem;
+          }
+          // #projects .content > .item > .wrap > .text
+          > .text {
+            padding: 0 15px;
+            text-align: center;
+          }
+          // #projects .content > .item > .wrap > .link
+          > .link {
+            // #projects .content > .item > .wrap > .link > a
+            a,
+            a:active,
+            a:visited {
+              color: #333333;
+              text-decoration: none;
+            }
           }
         }
         // #projects .content > .item:hover
@@ -817,13 +856,19 @@ section {
           box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.2);
           transition: all 500ms;
           > .image {
-            margin-top: -300px;
+            top: -75px;
+            transform: translate(0, 0);
             transition: all 500ms;
             > img {
               -webkit-filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.2));
               filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.2));
               transition: all 500ms;
             }
+          }
+
+          > .wrap {
+            opacity: 1;
+            transition: all 500ms;
           }
         }
         // #projects .content > .item#project-limoney
